# cumulant-residual-cert

./: .gitignore  .zenodo.json  AUDIT_COMMIT  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml  docs.yml
docs/: api.md  constants_table.md  index.md  jw_range_caveat.md  performance.md  quickstart.md  reproducibility_link.md
notebooks/: 00_tutorial.ipynb  01_quickstart.ipynb  02_bernoulli_worked.ipynb  03_pyscf_hartree_fock.ipynb  04_real_shadow_data.ipynb  05_cookbook.ipynb
src/cumulant_residual_cert/: __init__.py  _fermion.py  _majorana.py  _matchgate.py  _matchgate_shadow.py  _normal_order.py  _partition.py  _rdm_eval.py  catalog.py  certify.py  constants.py  diagnostic.py
src/cumulant_residual_cert/adapters/: __init__.py  _common.py  openfermion.py  pyscf.py  qiskit_nature.py
src/cumulant_residual_cert/data/: chemistry_catalog_r4.json
tests/: test_adapters.py  test_catalog.py  test_certify.py  test_constants.py  test_diagnostic.py  test_diagnostic_unbiased.py  test_golden_sync.py  test_majorana.py  test_matchgate_end_to_end.py  test_matchgate_inverse_channel.py  test_matchgate_inverse_channel_perf.py  test_matchgate_primitives.py  test_normal_order.py  test_rdm_eval.py
tools/: benchmark.py
